objects/Call_Grading_Form_2_0__c.object
<CustomObject>
    <fields>
        <fullName>Account_Information__c</fullName>
        <label>Account Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Grading Form 2.0</relationshipLabel>
        <relationshipName>Call_Grading_Form_2_0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acknowledge_Reason_for_Call__c</fullName>
        <label>Acknowledge Reason for Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_History__c</fullName>
        <label>Activity History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adherence_Grade__c</fullName>
        <label>Adherence Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ads_Upsell_Pitched__c</fullName>
        <label>Ads Upsell Pitched</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ads__c</fullName>
        <label>Ads</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Grading_Form_2_0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Details__c</fullName>
        <label>Agreement Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alert_Others_of_Mail__c</fullName>
        <inlineHelpText>“Are you the person that normally handles the mail for your office? Please let anyone else who might have access to that mailbox know that you are expecting something from Google. Please have them save it for you when they receive it, OK?”</inlineHelpText>
        <label>Alert Others of Mail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Client_Issue_s_Resolved__c</fullName>
        <label>All Client Issue(s) Resolved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appropriate_downsell__c</fullName>
        <label>Appropriate downsell solution offered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_we_manager_Not_Comm_Manager__c</fullName>
        <label>Are we manager (Not Comm. Manager?)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To_Manager__c</fullName>
        <formula>Agent_Name__r.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attempt_Log_in__c</fullName>
        <label>Attempt Dashboard Log in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attempts_to_Contact__c</fullName>
        <label>Attempts to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attitude_Tone_Empathy__c</fullName>
        <description>.</description>
        <inlineHelpText>CONSIDERATIONS FOR SCORING: encouraging tone &amp; phrasing, speaks confidently, shows professionalism, friendly, excited, energetic, remains calm in tough situations, confident &amp; direct phrases used (not using "it looks like, it sound like")</inlineHelpText>
        <label>Attitude/Tone/Empathy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_Users__c</fullName>
        <label>Authorized Users</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automated_Email__c</fullName>
        <label>Automated Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automated_Message_Overview__c</fullName>
        <label>Automated Messages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backend_Login__c</fullName>
        <label>Backend Login</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Basic_setup__c</fullName>
        <label>Basic setup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Practices__c</fullName>
        <label>Best Practices</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday Messages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blogging__c</fullName>
        <label>Blogging</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Build_Value_in_Product__c</fullName>
        <label>Build Value in Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCall_Flow_Adherence1__c</fullName>
        <formula>IF( RecordTypeId = '01232000000M3bu', 
IF(ISPICKVAL( Introduction__c ,"1"),50,0)+ 
IF(ISPICKVAL( Introduction__c ,"2"),100,0)+ 

IF(ISPICKVAL( Basic_setup__c ,"1"),50,0)+ 
IF(ISPICKVAL( Basic_setup__c ,"2"),100,0)+ 

IF(ISPICKVAL( USPs_Business_Qualifiers__c ,"1"),50,0)+ 
IF(ISPICKVAL( USPs_Business_Qualifiers__c ,"2"),100,0)+ 

IF(ISPICKVAL( Confirm_Segment_Services__c ,"1"),50,0)+ 
IF(ISPICKVAL( Confirm_Segment_Services__c ,"2"),100,0)+ 

IF(ISPICKVAL( DB_Login_Overview__c ,"1"),50,0)+ 
IF(ISPICKVAL( DB_Login_Overview__c ,"2"),100,0)+ 

IF(ISPICKVAL( Home_screen__c ,"1"),50,0)+ 
IF(ISPICKVAL( Home_screen__c ,"2"),100,0)+ 

IF(ISPICKVAL( Social__c ,"1"),50,0)+ 
IF(ISPICKVAL( Social__c ,"2"),100,0)+ 

IF(ISPICKVAL( Contacts__c ,"1"),50,0)+ 
IF(ISPICKVAL( Contacts__c ,"2"),100,0)+ 

IF(ISPICKVAL( Email_Marketing__c ,"1"),50,0)+ 
IF(ISPICKVAL( Email_Marketing__c ,"2"),100,0)+ 

IF(ISPICKVAL( Review_Solicitation__c ,"1"),50,0)+ 
IF(ISPICKVAL( Review_Solicitation__c ,"2"),100,0)+ 

IF(ISPICKVAL( Template_Notes__c ,"1"),50,0)+ 
IF(ISPICKVAL( Template_Notes__c ,"2"),100,0)+ 

IF(ISPICKVAL( Photo_Upload__c ,"1"),50,0)+ 
IF(ISPICKVAL( Photo_Upload__c ,"2"),100,0)+ 

IF(ISPICKVAL( Website_Design__c ,"1"),50,0)+ 
IF(ISPICKVAL( Website_Design__c ,"2"),100,0)+ 

IF(ISPICKVAL( Website_Review__c ,"1"),50,0)+ 
IF(ISPICKVAL( Website_Review__c ,"2"),100,0)+ 

IF(ISPICKVAL( My_Account__c ,"1"),50,0)+ 
IF(ISPICKVAL( My_Account__c ,"2"),100,0)+ 

IF(ISPICKVAL( Maps_Education__c ,"1"),50,0)+ 
IF(ISPICKVAL( Maps_Education__c ,"2"),100,0)+ 

IF(ISPICKVAL( Next_Touch_Point__c ,"1"),50,0)+ 
IF(ISPICKVAL( Next_Touch_Point__c ,"2"),100,0)+ 

IF(ISPICKVAL( Proper_Closing_Transfer__c ,"1"),50,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c ,"2"),100,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCall Flow Adherence1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCall_Flow_Adherence_Qualitative_Formula__c</fullName>
        <formula>CSC_Monitoring_Forms_Formula_1__c/CSC_Monitoring_Forms_Formula_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCall Flow Adherence/Qualitative Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CCall_Flow_Adherence__c</fullName>
        <formula>CCall_Flow_Adherence1__c/CSC_Monitoring_Forms_Text_Formula_2_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCall Flow Adherence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSC_Monitoring_Forms_Formula_1__c</fullName>
        <formula>IF( RecordTypeId = '01232000000M3bu', 
IF(ISPICKVAL(  Introduction__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Introduction__c ,"2"),100,0)+ 

IF(ISPICKVAL(  Basic_setup__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Basic_setup__c  ,"2"),100,0)+ 

IF(ISPICKVAL(  USPs_Business_Qualifiers__c  ,"1"),50,0)+ 
IF(ISPICKVAL( USPs_Business_Qualifiers__c  ,"2"),100,0)+ 

IF(ISPICKVAL(  Confirm_Segment_Services__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Confirm_Segment_Services__c ,"2"),100,0)+ 

IF(ISPICKVAL(  DB_Login_Overview__c  ,"1"),50,0)+ 
IF(ISPICKVAL( DB_Login_Overview__c ,"2"),100,0)+
 
IF(ISPICKVAL(  Home_screen__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Home_screen__c  ,"2"),100,0)+ 

IF(ISPICKVAL(  Social__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Social__c  ,"2"),100,0)+ 

IF(ISPICKVAL(  Contacts__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Contacts__c  ,"2"),100,0)+ 

IF(ISPICKVAL(  Email_Marketing__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Email_Marketing__c ,"2"),100,0)+ 

IF(ISPICKVAL(  Review_Solicitation__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Review_Solicitation__c  ,"2"),100,0)+ 

IF(ISPICKVAL(  Template_Notes__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Template_Notes__c ,"2"),100,0)+ 

IF(ISPICKVAL(  Photo_Upload__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Photo_Upload__c ,"2"),100,0)+ 

IF(ISPICKVAL(   Website_Design__c   ,"1"),50,0)+ 
IF(ISPICKVAL( Website_Design__c  ,"2"),100,0)+ 

IF(ISPICKVAL(    Website_Review__c   ,"1"),50,0)+ 
IF(ISPICKVAL( Website_Review__c  ,"2"),100,0)+ 

IF(ISPICKVAL(     My_Account__c    ,"1"),50,0)+ 
IF(ISPICKVAL( My_Account__c  ,"2"),100,0)+ 

IF(ISPICKVAL( Mobile__c ,"1"),50,0)+ 
IF(ISPICKVAL( Mobile__c  ,"2"),100,0)+ 

IF(ISPICKVAL(      Maps_Education__c    ,"1"),50,0)+ 
IF(ISPICKVAL( Maps_Education__c  ,"2"),100,0)+ 

IF(ISPICKVAL(       Next_Touch_Point__c     ,"1"),50,0)+ 
IF(ISPICKVAL( Next_Touch_Point__c  ,"2"),100,0)+ 

IF(ISPICKVAL(       Proper_Closing_Transfer__c      ,"1"),50,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c ,"2"),100,0)+ 

IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"2"),50,0)+ 
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"4"),100,0)+
 
IF(ISPICKVAL( Resolution_Skills__c ,"2"),50,0)+ 
IF(ISPICKVAL( Resolution_Skills__c,"4"),100,0)+ 

IF(ISPICKVAL( Conversational_Ability__c ,"2"),50,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"4"),100,0)+ 

IF(ISPICKVAL( Information_Accuracy__c ,"2"),50,0)+ 
IF(ISPICKVAL( Information_Accuracy__c,"4"),100,0)+ 

IF(ISPICKVAL( Pace__c ,"2"),50,0)+ 
IF(ISPICKVAL( Pace__c,"4"),100,0)+ 

IF(ISPICKVAL( Call_control__c ,"2"),50,0)+ 
IF(ISPICKVAL( Call_control__c,"4"),100,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSC Monitoring Forms Formula 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Monitoring_Forms_Formula_21__c</fullName>
        <formula>IF(ISPICKVAL( Introduction__c ,"0"),100,0)+ 
IF(ISPICKVAL( Introduction__c ,"1"),100,0)+ 
IF(ISPICKVAL( Introduction__c ,"2"),100,0)+ 
IF(ISPICKVAL(  Basic_setup__c ,"0"),100,0)+ 
IF(ISPICKVAL(  Basic_setup__c ,"1"),100,0)+ 
IF(ISPICKVAL(  Basic_setup__c ,"2"),100,0)+ 
IF(ISPICKVAL( USPs_Business_Qualifiers__c  ,"0"),100,0)+ 
IF(ISPICKVAL( USPs_Business_Qualifiers__c  ,"1"),100,0)+ 
IF(ISPICKVAL( USPs_Business_Qualifiers__c  ,"2"),100,0)+ 
IF(ISPICKVAL( Confirm_Segment_Services__c ,"0"),100,0)+ 
IF(ISPICKVAL( Confirm_Segment_Services__c ,"1"),100,0)+ 
IF(ISPICKVAL( Confirm_Segment_Services__c ,"2"),100,0)+ 
IF(ISPICKVAL( DB_Login_Overview__c ,"0"),100,0)+ 
IF(ISPICKVAL( DB_Login_Overview__c ,"1"),100,0)+ 
IF(ISPICKVAL( DB_Login_Overview__c ,"2"),100,0)+ 
IF(ISPICKVAL( Home_screen__c ,"0"),100,0)+ 
IF(ISPICKVAL( Home_screen__c ,"1"),100,0)+ 
IF(ISPICKVAL( Home_screen__c ,"2"),100,0)+ 
IF(ISPICKVAL( Social__c ,"1"),100,0)+ 
IF(ISPICKVAL( Social__c ,"1"),100,0)+ 
IF(ISPICKVAL( Social__c ,"2"),100,0)+ 
IF(ISPICKVAL( Contacts__c ,"0"),100,0)+ 
IF(ISPICKVAL( Contacts__c ,"1"),100,0)+ 
IF(ISPICKVAL( Contacts__c ,"2"),100,0)+ 
IF(ISPICKVAL( Email_Marketing__c ,"0"),100,0)+ 
IF(ISPICKVAL( Email_Marketing__c ,"1"),100,0)+ 
IF(ISPICKVAL( Email_Marketing__c ,"2"),100,0)+ 
IF(ISPICKVAL( Review_Solicitation__c ,"0"),100,0)+ 
IF(ISPICKVAL( Review_Solicitation__c ,"1"),100,0)+ 
IF(ISPICKVAL( Review_Solicitation__c ,"2"),100,0)+ 
IF(ISPICKVAL( Template_Notes__c ,"0"),100,0)+ 
IF(ISPICKVAL( Template_Notes__c ,"1"),100,0)+ 
IF(ISPICKVAL( Template_Notes__c ,"2"),100,0)+ 
IF(ISPICKVAL( Photo_Upload__c,"0"),100,0)+ 
IF(ISPICKVAL( Photo_Upload__c ,"1"),100,0)+ 
IF(ISPICKVAL( Photo_Upload__c ,"2"),100,0)+ 
IF(ISPICKVAL( Website_Design__c,"0"),100,0)+ 
IF(ISPICKVAL( Website_Design__c ,"1"),100,0)+ 
IF(ISPICKVAL( Website_Design__c ,"2"),100,0)+ 
IF(ISPICKVAL( Website_Review__c,"0"),100,0)+ 
IF(ISPICKVAL( Website_Review__c ,"1"),100,0)+ 
IF(ISPICKVAL( Website_Review__c ,"2"),100,0)+ 
IF(ISPICKVAL( My_Account__c,"0"),100,0)+ 
IF(ISPICKVAL( My_Account__c ,"1"),100,0)+ 
IF(ISPICKVAL( My_Account__c ,"2"),100,0)+
IF(ISPICKVAL( Mobile__c ,"0"),100,0)+
IF(ISPICKVAL( Mobile__c ,"1"),100,0)+
IF(ISPICKVAL( Mobile__c ,"2"),100,0)+ 
IF(ISPICKVAL( Maps_Education__c,"0"),100,0)+ 
IF(ISPICKVAL( Maps_Education__c ,"1"),100,0)+ 
IF(ISPICKVAL( Maps_Education__c ,"2"),100,0)+ 
IF(ISPICKVAL( Next_Touch_Point__c,"0"),100,0)+ 
IF(ISPICKVAL( Next_Touch_Point__c ,"1"),100,0)+ 
IF(ISPICKVAL( Next_Touch_Point__c ,"2"),100,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c ,"0"),100,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c  ,"1"),100,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c  ,"2"),100,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSC Monitoring Forms Formula 2.1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Monitoring_Forms_Formula_22__c</fullName>
        <formula>IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"0"),100,0)+ 
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"2"),100,0)+ 
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"4"),100,0)+ 
IF(ISPICKVAL( Resolution_Skills__c ,"0"),100,0)+ 
IF(ISPICKVAL( Resolution_Skills__c ,"2"),100,0)+ 
IF(ISPICKVAL( Resolution_Skills__c,"4"),100,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"0"),100,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"2"),100,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"4"),100,0)+ 
IF(ISPICKVAL( Information_Accuracy__c ,"0"),100,0)+ 
IF(ISPICKVAL( Information_Accuracy__c ,"2"),100,0)+ 
IF(ISPICKVAL( Information_Accuracy__c,"4"),100,0)+ 
IF(ISPICKVAL( Pace__c ,"0"),100,0)+ 
IF(ISPICKVAL( Pace__c ,"2"),100,0)+ 
IF(ISPICKVAL( Pace__c,"4"),100,0)+ 
IF(ISPICKVAL( Call_control__c ,"0"),100,0)+ 
IF(ISPICKVAL( Call_control__c ,"2"),100,0)+ 
IF(ISPICKVAL( Call_control__c,"4"),100,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSC Monitoring Forms Formula 2.2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Monitoring_Forms_Text_Formula_2_1__c</fullName>
        <label>CSC Monitoring Forms Text Formula 2.1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Monitoring_Forms_Text_Formula_2_2__c</fullName>
        <label>CSC Monitoring Forms Text Formula 2.2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Integration__c</fullName>
        <label>Calendar Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Attached__c</fullName>
        <label>Call Attached</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Date_Time__c</fullName>
        <label>Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Flow_Adherence_Formula_1_Text__c</fullName>
        <label>Call Flow Adherence Formula 1 Text</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Flow_Adherence_Formula_1__c</fullName>
        <formula>IF( RecordTypeId = '01232000000M3bz',
IF(ISPICKVAL( Opening__c ,"1"),50,0)+ 
IF(ISPICKVAL( Opening__c ,"2"),100,0)+ 
IF(ISPICKVAL( Uncover_the_Issue__c ,"1"),50,0)+ 
IF(ISPICKVAL( Uncover_the_Issue__c ,"2"),100,0)+ 
IF(ISPICKVAL( Concerns__c ,"1"),50,0)+ 
IF(ISPICKVAL( Concerns__c ,"2"),100,0)+ 
IF(ISPICKVAL( Ownership__c ,"1"),50,0)+ 
IF(ISPICKVAL( Ownership__c ,"2"),100,0)+ 
IF(ISPICKVAL( Issues_Resolved__c ,"1"),50,0)+ 
IF(ISPICKVAL( Issues_Resolved__c ,"2"),100,0)+ 
IF(ISPICKVAL( Agreement_Details__c ,"1"),50,0)+ 
IF(ISPICKVAL( Agreement_Details__c ,"2"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"1"),50,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"2"),100,0)+ 
IF(ISPICKVAL( Outstanding_questions__c ,"1"),50,0)+ 
IF(ISPICKVAL( Outstanding_questions__c ,"2"),100,0)+ 
IF(ISPICKVAL( closing__c ,"1"),50,0)+ 
IF(ISPICKVAL( closing__c ,"2"),100,0)+ 
IF(ISPICKVAL( Appropriate_downsell__c ,"1"),50,0)+ 
IF(ISPICKVAL( Appropriate_downsell__c ,"2"),100,0)+ 
IF(ISPICKVAL( No_concession__c ,"1"),50,0)+ 
IF(ISPICKVAL( No_concession__c ,"2"),100,0)+ 
IF(ISPICKVAL( Attempt_Log_in__c ,"1"),50,0)+ 
IF(ISPICKVAL( Attempt_Log_in__c ,"2"),100,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Flow Adherence Formula 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Flow_Adherence_Formula_2_Text__c</fullName>
        <label>Call Flow Adherence Formula 2 Text</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Flow_Adherence_Formula_2__c</fullName>
        <formula>IF( RecordTypeId = '01232000000M3bz', 
IF(ISPICKVAL( Opening__c ,"0"),100,0)+ 
IF(ISPICKVAL( Opening__c ,"1"),100,0)+ 
IF(ISPICKVAL( Opening__c ,"2"),100,0)+ 
IF(ISPICKVAL( Uncover_the_Issue__c ,"0"),100,0)+ 
IF(ISPICKVAL( Uncover_the_Issue__c ,"1"),100,0)+ 
IF(ISPICKVAL( Uncover_the_Issue__c ,"2"),100,0)+ 
IF(ISPICKVAL( Concerns__c ,"0"),100,0)+ 
IF(ISPICKVAL( Concerns__c ,"1"),100,0)+ 
IF(ISPICKVAL( Concerns__c ,"2"),100,0)+ 
IF(ISPICKVAL( Ownership__c ,"0"),100,0)+ 
IF(ISPICKVAL( Ownership__c ,"1"),100,0)+ 
IF(ISPICKVAL( Ownership__c ,"2"),100,0)+ 
IF(ISPICKVAL( Issues_Resolved__c ,"0"),100,0)+ 
IF(ISPICKVAL( Issues_Resolved__c ,"1"),100,0)+ 
IF(ISPICKVAL( Issues_Resolved__c ,"2"),100,0)+ 
IF(ISPICKVAL( Agreement_Details__c ,"0"),100,0)+ 
IF(ISPICKVAL( Agreement_Details__c ,"1"),100,0)+ 
IF(ISPICKVAL( Agreement_Details__c ,"2"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"0"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"1"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"2"),100,0)+ 
IF(ISPICKVAL( Outstanding_questions__c ,"0"),100,0)+ 
IF(ISPICKVAL( Outstanding_questions__c ,"1"),100,0)+ 
IF(ISPICKVAL( Outstanding_questions__c ,"2"),100,0)+ 
IF(ISPICKVAL( closing__c ,"0"),100,0)+ 
IF(ISPICKVAL( closing__c ,"1"),100,0)+ 
IF(ISPICKVAL( closing__c ,"2"),100,0)+ 
IF(ISPICKVAL( Appropriate_downsell__c ,"0"),100,0)+ 
IF(ISPICKVAL( Appropriate_downsell__c ,"1"),100,0)+ 
IF(ISPICKVAL( Appropriate_downsell__c ,"2"),100,0)+ 
IF(ISPICKVAL( No_concession__c ,"0"),100,0)+ 
IF(ISPICKVAL( No_concession__c ,"1"),100,0)+ 
IF(ISPICKVAL( No_concession__c ,"2"),100,0)+ 
IF(ISPICKVAL( Attempt_Log_in__c ,"0"),100,0)+ 
IF(ISPICKVAL( Attempt_Log_in__c ,"1"),100,0)+ 
IF(ISPICKVAL( Attempt_Log_in__c ,"2"),100,0),0)</formula>
        <label>Call Flow Adherence Formula 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Grade__c</fullName>
        <formula>IF(RecordTypeId = '01232000000M3bu',  CCall_Flow_Adherence_Qualitative_Formula__c, 
 IF(RecordTypeId = '01232000000M3c4',  ICall_Flow_Adherence_Qualitative_Formula__c, 
 IF(RecordTypeId = '01232000000M3bz',  SCall_Flow_Adherence_Qualitative_Formula__c, 0) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Live Call</fullName>
                </value>
                <value>
                    <fullName>Recorded Call</fullName>
                </value>
                <value>
                    <fullName>Consultant Review Session</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_control__c</fullName>
        <description>.</description>
        <label>Call control</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancellation Form</label>
        <referenceTo>Cancellation_Request__c</referenceTo>
        <relationshipLabel>Call Grading Form 2.0</relationshipLabel>
        <relationshipName>Call_Grading_Form_2_0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cannot_Complete_Reason__c</fullName>
        <label>Cannot Complete Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>